tests/conformance/accept/toplevel-reassign.ts
// Top-level reassignment (issue #49): accepted; prints 1.
let counter = 0;
counter = counter + 1;
console.log(counter);
